<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="_text_city">City: </string>
    <string name="_text_country">Country: </string>
    <string name="real_feel_temperature_string">real feel</string>
    <string name="metric_km_h_string">km/h</string>
    <string name="string_percent" translatable="false">%</string>
    <string name="text_dialog_fragment_no_internet">Choose conect to internet</string>
    <string name="text_string_opadu">precipation:</string>
    <string name="string_celsius" translatable="false">°C</string>
    <string name="string_tts_no_data">no data</string>
    <string name="string_tts_hour">hour</string>
    <string name="string_tts_the_weather_is">the weather is</string>
    <string name="string_tts_speed_wind">speed wind</string>
    <string name="string_tts_km_h">kilometers per hour</string>
    <string name="string_tts_temperature">temperature</string>
    <string name="string_tts_today">today</string>
    <string name="string_tts_tomorrow">tomorrow</string>
    <string name="string_tts_on_day">on day</string>
    <string name="string_tts_in_the_night">in the night</string>
    <string name="string_text_data_updated">data updated</string>
</resources>
