<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/special_toast_conteiner_5days"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_list_day_5day_special_view">

    <TextView
        android:id="@+id/dialog_special_date_5day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="35sp"
        android:textStyle="bold"
        tool:text="Пон, 23 Листопада" />
    <TextView
        android:id="@+id/dialog_special_in_the_night_5day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog_special_temperature_night_5day"
        android:layout_alignParentStart="true"
        android:text="@string/string_tts_in_the_night"
        android:textAlignment="center"
        android:textColor="@color/text_list_night"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_special_on_day_5day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_special_date_5day"
        android:text="@string/string_tts_on_day"
        android:textAlignment="center"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_special_temperature_night_5day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog_special_discribe_night_5day"
        android:layout_alignStart="@+id/dialog_special_temperature_day_5day"
        android:textAllCaps="false"
        android:textColor="@color/text_list_night"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold"
        tool:text="12" />

    <TextView
        android:id="@+id/dialog_special_temperature_day_5day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dialog_special_on_day_5day"
        android:layout_marginLeft="10dp"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold"
        tool:text="12" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog_special_discribe_day_5day"
        android:layout_toEndOf="@+id/dialog_special_temperature_day_5day"
        android:text="@string/string_celsius"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="@dimen/special_dialog_text" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_drop_0"
        android:tint="@color/text_list_night"
        tool:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dialog_special_discribe_night_5day"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="@color/text_list_night"
        android:textSize="38sp"
        tool:text="Часом хмарно з переходом в грозу d [vfhyscnm nbvxfcjde " />

    <TextView
        android:id="@+id/dialog_special_precipation_night_5day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dialog_special_precipation_day_5day"
        android:layout_alignTop="@+id/imageView5"
        android:textColor="@color/text_list_night"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold"
        tool:text="100" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dialog_special_on_day_5day"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_drop_0"
        android:tint="@color/gradient_list_night_end"
        tool:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_special_precipation_night_5day"
        android:layout_alignBottom="@+id/dialog_special_precipation_night_5day"
        android:layout_toStartOf="@+id/imageView5"
        android:text="@string/string_percent"
        android:textColor="@color/text_list_night"
        android:textSize="@dimen/special_dialog_text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog_special_discribe_night_5day"
        android:layout_toEndOf="@+id/dialog_special_temperature_night_5day"
        android:text="@string/string_celsius"
        android:textColor="@color/text_list_night"
        android:textSize="@dimen/special_dialog_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialog_special_precipation_day_5day"
        android:layout_alignBottom="@+id/dialog_special_precipation_day_5day"
        android:layout_toStartOf="@+id/imageView6"
        android:text="@string/string_percent"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="@dimen/special_dialog_text" />

    <TextView
        android:id="@+id/dialog_special_precipation_day_5day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_special_on_day_5day"
        android:layout_toStartOf="@+id/textView4"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="@dimen/special_dialog_text"
        android:textStyle="bold"
        tool:text="100" />

    <TextView
        android:id="@+id/dialog_special_discribe_day_5day"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:textAlignment="center"
        android:textColor="@color/gradient_list_night_end"
        android:textSize="38sp"
        android:textStyle="bold"
        tool:text="Часом хмарно з переходом в грозу" />


</RelativeLayout>
